--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li><a target = "_blank" href="https://www.facebook.com/MissyMiel"><i class="fa fa-facebook"></i></a></li>
 		      <li><a target = "_blank" href="https://www.linkedin.com/in/mélanie-tyburn"><i class="fa fa-linkedin"></i></a></li>
           <li><a target = "_blank" href="https://www.youtube.com/channel/UClouO6uwinv5mP8_Ozwf90Q"><i class="fa fa-youtube"></i></a></li>
+          <li><a target = "_blank" href="https://github.com/melanie-tyburn"><i class="fa fa-git"></i></a></li>
         </ul>
       </div> <!-- /.social-icons -->
 		</div>
